--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .CFUserTextEncoding
 .DS_Store
+.git-credentials
 .lesshst
 .python_history
 .zcompdump*
@@ -11,7 +12,13 @@ Google Drive
 .cache/
 .config/
 .gem/
+.mono/
+.npm/
 .local/
+.oh-my-zsh/
+.oracle_jre_usage/
+.swiftpm
+.vscode/
 .zsh_sessions/
 
 Applications/
