--- a/.gitconfig
+++ b/.gitconfig
@@ -16,7 +16,7 @@
 
 [credential]
 	helper = store
+	helper = 
 	helper = /usr/local/share/gcm-core/git-credential-manager
-
 [credential "https://dev.azure.com"]
 	useHttpPath = true
