Set default Git editor to Vim; remove gitconfig interlines

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,19 +1,17 @@
+[core]
+        editor = vim
 [filter "lfs"]
 	clean = git-lfs clean -- %f
 	smudge = git-lfs smudge -- %f
 	process = git-lfs filter-process
 	required = true
-
 [user]
 	name = mattmaniak
 	email = 72657016+mattmaniak@users.noreply.github.com
-
 [push]
 	default = current
-
 [pull]
 	rebase = false
-
 [credential]
 	helper = store
 	helper = 
