Move apps config dotfiles scripts into a dedicated dir

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,12 @@
 *
 
-!.backup.sh
 !.code_settings.json
 !.dotfiles
 !.git_amend_last_commit_author.sh
+!.git_fetch_all_branches.sh
 !.gitconfig
 !.gitignore
 !.globalupgrade.sh
-!.install.sh
 !.zprofile
 !.zshrc
 !Brewfile
