Add Editor Ruler and disable save confirmation for untitled workspace

--- a/.appsconfig/.vscode_settings.json
+++ b/.appsconfig/.vscode_settings.json
@@ -20,7 +20,11 @@
     "makefile.configureOnOpen": false,
     "diffEditor.codeLens": true,
     "git.ignoreMissingGitWarning": true,
+    "editor.rulers": [
+        80
+    ],
     "git.confirmSync": false,
     "csharp.suppressDotnetInstallWarning": true,
-    "files.trimFinalNewlines": true
+    "files.trimFinalNewlines": true,
+    "window.confirmSaveUntitledWorkspace": false
 }
